// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary component correctly 1`] = `
<div>
  <h2>
    Viewing 
    4
     
    expenses
     totalling 
    1,200.0
  </h2>
</div>
`;

exports[`Should render ExpenseSummary component correctly with missing data 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    0.0
  </h2>
</div>
`;
